Remove enable preview