@@ -97,9 +97,6 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
